<?xml version="1.0"?>
<package format="2">
  <name>falcon_franka_teleop</name>
  <version>0.0.0</version>
  <description>The falcon_franka_teleop package</description>

  <maintainer email="rafi@todo.todo">rafi</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>franka_msgs</build_depend>
  <build_depend>ros_falcon</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf2_ros</build_depend>

  <!-- Export build dependencies -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>franka_msgs</build_export_depend>
  <build_export_depend>ros_falcon</build_export_depend>

  <!-- Runtime dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>franka_msgs</exec_depend>
  <exec_depend>ros_falcon</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
  </export>
</package>
